HW1/ Added My answers

--- a/HW1/Q5.ipynb
+++ b/HW1/Q5.ipynb
@@ -245,16 +245,16 @@
       "cell_type": "code",
       "execution_count": 129,
       "metadata": {
-        "id": "Q7ntj1Es6u2x",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Q7ntj1Es6u2x",
         "outputId": "f712af56-7afd-4123-8fdb-c4d40643b413"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch: 1 Loss: 336.4113\n",
             "Epoch: 2 Loss: 336.4363\n",
@@ -423,16 +423,16 @@
       "cell_type": "code",
       "execution_count": 130,
       "metadata": {
-        "id": "fPbTmdZu6uJA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "fPbTmdZu6uJA",
         "outputId": "b51e0c26-1ee9-4381-a6e6-0ce074ccdc81"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "machine [ 0.9836496   1.00943166 -0.70331904  0.47491823]\n",
             "machines 0.7059625750623806\n",
@@ -452,6 +452,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "t2tYYb3JZ7o8"
+      },
       "source": [
         "# Code Logic\n",
         "## Word2Vec (By Skipgram)\n",
@@ -503,26 +506,24 @@
         "<tr>\n",
         "<td>4</td>\n",
         "<td>2</td>\n",
-        "<td>150</td>\n",
         "<td>0.0001</td>\n",
+        "<td>150</td>\n",
         "<td>340.3658</td>\n",
         "<td>machines - fascinating - thoughts</td>\n",
         "</tr>\n",
         "</table>\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "t2tYYb3JZ7o8"
-      }
+        "\n",
+        "Based on my experiments the best hyperparameters are <i><b>n = 4, window_size = 2, learning_rate = 0.0001 and epochs = 150</i></b>\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "fQzO_LBegYoO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
